@@ -49,6 +49,7 @@
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-dbcp</artifactId>
+			<version>9.0.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
